# fiduswriter-books

./: .coveralls.yml  .gitignore  .travis.yml  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.py
.github/workflows/: main.yml
book/: admin.py  models.py  urls.py  views.py
book/locale/BASE/LC_MESSAGES/: django.mo  django.po
book/locale/bg/LC_MESSAGES/: django.po  djangojs.mo
book/locale/de/LC_MESSAGES/: django.mo  django.po
book/locale/es/LC_MESSAGES/: django.mo  django.po  djangojs.mo  djangojs.po
book/locale/fr/LC_MESSAGES/: django.mo  django.po  djangojs.mo
book/locale/it/LC_MESSAGES/: django.mo  django.po  djangojs.po
book/migrations/: 0001_initial.py  0002_auto_20151226_1110.py  0003_auto_20160515_1007.py  0004_auto_20160515_1008.py  0005_auto_20160515_1013.py
book/static/css/: book.css
book/static/js/: book_overview.mjs  booklist.mjs  print_book.mjs
book/static/js/es6_modules/books/: actions.js  index.js  menu.js  templates.js
book/static/js/es6_modules/books/accessrights/: index.js  templates.js
book/static/js/es6_modules/print-book/: index.js  templates.js
book/static/js/modules/books/: actions.js  index.js  menu.js  templates.js
book/static/js/modules/print_book/: index.js  templates.js
book/static/js/plugins/app/: book.js
book/templates/book/: index.html  print.html
ci/: configuration.py
fiduswriter/: .coverage
fiduswriter/book/: admin.py  apps.py  emails.py  models.py  signals.py  urls.py  views.py
fiduswriter/book/fixtures/: initial_book_data.json  initial_data.json
fiduswriter/book/locale/BASE/LC_MESSAGES/: djangojs.po
fiduswriter/book/locale/bg/LC_MESSAGES/: django.mo  django.po  djangojs.mo  djangojs.po
fiduswriter/book/locale/de/LC_MESSAGES/: django.mo  django.po  djangojs.mo  djangojs.po
fiduswriter/book/locale/es/LC_MESSAGES/: django.mo  django.po  djangojs.mo  djangojs.po
fiduswriter/book/locale/fr/LC_MESSAGES/: django.mo  django.po  djangojs.mo  djangojs.po
fiduswriter/book/locale/it/LC_MESSAGES/: django.mo  django.po  djangojs.mo  djangojs.po
fiduswriter/book/locale/pt_BR/LC_MESSAGES/: django.mo  django.po  djangojs.mo  djangojs.po
fiduswriter/book/migrations/: 0001_initial.py  0002_auto_20151226_1110.py  0003_auto_20160515_1007.py  0004_auto_20160515_1008.py  0005_auto_20160515_1013.py  0006_auto_20190622_2126.py  0007_bookstyle_bookstylefile.py  0008_auto_20210228_1421.py  0009_auto_20210323_1003.py  0010_add_generic_accessrights.py  0011_convert_accessrights.py  0012_remove_user_accessrights.py  0013_move_json_data.py  0014_add_language.py  0015_book_odt_template.py  0016_book_docx_template.py  0017_book_styles.py
fiduswriter/book/static/css/: book.css  book_dialog.css
fiduswriter/book/tests/: helpers.py  test_book.py  test_book_template_save.py
fiduswriter/book/tests/uploads/: template.docx  template.odt
(+52 files in other folders)
